# grayscale_filter

./: CMakeLists.txt  FindFreeImage.cmake  README.md  example_lib_grayscale_filter.cpp
lib_grayscale_filter/: CMakeLists.txt  FindFreeImage.cmake  filterdawgs.cpp  filterdawgs.h  filterdawgscolourize.cpp  filterdawgscolourize.h  filterrotate.cpp  filterrotate.h  fimage.cpp  fimage.h  genericimage.cpp  genericimage.h  genericrgb.h  helpers.h  nullptr.h  random.cpp  random.h
lib_grayscale_filter/include/: filterdawgscolourize.h  helpers.h  nullptr.h  random.h
src/: example_lib_grayscale_filter.cpp
